tests/errors/from_yaml_invalid_enum.dang
enum Status { PASSED FAILED }

type Child {
  name: String!
  outcome: Status!
}

type Summary {
  children: [Child!]!
}

let summary: Summary! = fromYAML("""
children:
  - name: one
    outcome: Skipped
""")
